...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Dashboard'),
        centerTitle: true,
        elevation: 0,
        actions: [
          IconButton(
            icon: const Icon(Icons.person),
            onPressed: () => Navigator.pushNamed(context, AppRoutes.profile),
...
                          ),
                        ),
                        const SizedBox(width: 16),
                        Expanded(
                          child: _MenuButton(
                            icon: Icons.assessment,
                            label: 'Hasil Voting',
                            onPressed: () {
                              Navigator.pushNamed(context, AppRoutes.result);
                            },
                          ),
                        ),
                      ],
...
                          ),
                        ),
                        const SizedBox(width: 16),
                        Expanded(
                          child: _MenuButton(
                            icon: Icons.how_to_vote,
                            label: 'Vote Sekarang',
                            onPressed: () {
                              context
                                  .read<CandidateProvider>()
                                  .fetchCandidates()
                                  .then(
                                (_) {
...
